@@ -1,11 +1,7 @@
 package com.sharedexpenses.domain.defaultcalculators;
 
-import com.sharedexpenses.domain.BalanceCalculator;
-import com.sharedexpenses.domain.Balance;
-import com.sharedexpenses.domain.Friend;
-import com.sharedexpenses.domain.Payment;
+import com.sharedexpenses.domain.*;
 import org.junit.jupiter.api.Test;
-
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
@@ -20,8 +16,9 @@ import static org.hamcrest.Matchers.*;
 public class DefaultBalanceCalculatorTest {
 
     private final BalanceCalculator balanceCalculator = new DefaultBalanceCalculator();
-    Friend friendSonia = new Friend("Sonia", 1, 1);
-    Friend friendPaco = new Friend("Paco", 1, 2);
+    Friend friendSonia = new Friend(1, "Sonia", new FriendsGroup("test grupo"));
+    Friend friendPaco = new Friend(2, "Paco", new FriendsGroup("test grupo"));
+
 
 
     @Test
@@ -32,52 +29,52 @@ public class DefaultBalanceCalculatorTest {
 
     @Test
     public void shouldCalculateBalanceWithoutPayments(){
-        List<Balance> result = balanceCalculator.calculateBalance(Collections.emptyList(), List.of(new Friend("Paco",1, 1)));
-        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(0, 2), new Friend("Paco", 1, 1)))));
+        List<Balance> result = balanceCalculator.calculateBalance(Collections.emptyList(), List.of(friendPaco));
+        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(0, 2), friendPaco))));
     }
 
     @Test
     public void shouldCalculateBalanceWithOnePaymentAndFriend(){
-        Payment payment = new Payment("concepto test", BigDecimal.valueOf(20), 1, LocalDateTime.now());
+        Payment payment = new Payment(1, "concepto test", BigDecimal.valueOf(20), friendSonia, LocalDateTime.now());
         List<Balance> result = balanceCalculator.calculateBalance(List.of(payment), List.of(friendSonia));
-        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(0, 2), new Friend("Sonia",1, 1)))));
+        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(0, 2), friendSonia))));
     }
 
     @Test
     public void shouldCalculateBalanceWithTwoFriendsAndOnePayment(){
-        Payment payment = new Payment("concepto test", BigDecimal.valueOf(20), 1, LocalDateTime.now());
+        Payment payment = new Payment(1, "concepto test", BigDecimal.valueOf(20), friendSonia, LocalDateTime.now());
         List<Balance> result = balanceCalculator.calculateBalance(List.of(payment), List.of(friendSonia, friendPaco));
 
-        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(-10.00).setScale(2), new Friend("Sonia", 1, 1)),
-                new Balance(BigDecimal.valueOf(10.00).setScale(2), new Friend("Paco", 1, 2)))));
+        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(-10.00).setScale(2), friendSonia),
+                new Balance(BigDecimal.valueOf(10.00).setScale(2), friendPaco))));
     }
 
     @Test
     public void shouldCalculateBalanceWithTwoFriendsAndMoreThanOnePayment(){
-        Payment payment1 = new Payment("concepto test", BigDecimal.valueOf(20), 1, LocalDateTime.now());
-        Payment payment2 = new Payment("concepto test", BigDecimal.valueOf(20), 1, LocalDateTime.now());
-        Payment payment3 = new Payment("concepto test", BigDecimal.valueOf(20), 2, LocalDateTime.now());
+        Payment payment1 = new Payment(1, "concepto test", BigDecimal.valueOf(20), friendSonia, LocalDateTime.now());
+        Payment payment2 = new Payment(2, "concepto test", BigDecimal.valueOf(20), friendSonia, LocalDateTime.now());
+        Payment payment3 = new Payment(3, "concepto test", BigDecimal.valueOf(20), friendPaco, LocalDateTime.now());
         List<Balance> result = balanceCalculator.calculateBalance(List.of(payment1, payment2, payment3), List.of(friendSonia, friendPaco));
 
-        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(-10).setScale(2), new Friend("Sonia",1,  1)),
-                new Balance(BigDecimal.valueOf(10).setScale(2), new Friend("Paco", 1, 2)))));
+        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(-10).setScale(2), friendSonia),
+                new Balance(BigDecimal.valueOf(10).setScale(2), friendPaco))));
     }
 
     @Test
     public void shouldCalculateBalanceWithDecimals(){
-        Payment payment1 = new Payment("concepto test", BigDecimal.valueOf(20.5), 1, LocalDateTime.now());
-        Payment payment2 = new Payment("concepto test", BigDecimal.valueOf(20), 1, LocalDateTime.now());
-        Payment payment3 = new Payment("concepto test", BigDecimal.valueOf(20), 2, LocalDateTime.now());
+        Payment payment1 = new Payment(1, "concepto test", BigDecimal.valueOf(20.5), friendSonia, LocalDateTime.now());
+        Payment payment2 = new Payment(2, "concepto test", BigDecimal.valueOf(20), friendSonia, LocalDateTime.now());
+        Payment payment3 = new Payment(3, "concepto test", BigDecimal.valueOf(20), friendPaco, LocalDateTime.now());
         List<Balance> result = balanceCalculator.calculateBalance(List.of(payment1, payment2, payment3), List.of(friendSonia, friendPaco));
 
-        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(-10.25), new Friend("Sonia", 1, 1)),
-                new Balance(BigDecimal.valueOf(10.25), new Friend("Paco",1, 2)))));
+        assertThat(result, is(List.of(new Balance(BigDecimal.valueOf(-10.25), friendSonia),
+                new Balance(BigDecimal.valueOf(10.25), friendPaco))));
     }
 
     @Test
     public void shouldCompareTwoBalances(){
-        Balance balance1 = new Balance(BigDecimal.valueOf(10), new Friend("Sonia",1, 1));
-        Balance balance2 = new Balance(BigDecimal.valueOf(20), new Friend("Paco", 1, 2));
+        Balance balance1 = new Balance(BigDecimal.valueOf(10), friendSonia);
+        Balance balance2 = new Balance(BigDecimal.valueOf(20), friendPaco);
 
         int resultado = balance1.compareTo(balance2);
 
@@ -86,9 +83,9 @@ public class DefaultBalanceCalculatorTest {
 
     @Test
     public void shouldSortBalanceList(){
-        Balance balance20 = new Balance(BigDecimal.valueOf(20), new Friend("Sonia",1,  1));
-        Balance balance10 = new Balance(BigDecimal.valueOf(10), new Friend("Sonia",1,  2));
-        Balance balance30 = new Balance(BigDecimal.valueOf(30), new Friend("Paco",1,  2));
+        Balance balance20 = new Balance(BigDecimal.valueOf(20), friendSonia);
+        Balance balance10 = new Balance(BigDecimal.valueOf(10), friendSonia);
+        Balance balance30 = new Balance(BigDecimal.valueOf(30), friendPaco);
 
         List<Balance> list = new ArrayList<>();
         list.add(balance20);
@@ -97,9 +94,8 @@ public class DefaultBalanceCalculatorTest {
 
         Collections.sort(list, Collections.reverseOrder());
 
-        assertThat(list, contains(new Balance(BigDecimal.valueOf(30), new Friend("Paco",1, 2)),
-                new Balance(BigDecimal.valueOf(20), new Friend("Sonia",1, 1)),
-                new Balance(BigDecimal.valueOf(10), new Friend("Sonia",1, 1))));
-
+        assertThat(list, contains(new Balance(BigDecimal.valueOf(30), friendPaco),
+                new Balance(BigDecimal.valueOf(20), friendSonia),
+                new Balance(BigDecimal.valueOf(10), friendSonia)));
     }
 }
